Avoid changing the user's PATH
Signed-off-by: Federico Valeri <fedevaleri@gmail.com>